# research-students-fall-2025-desa-thomas

./: .gitignore  README.md  literature.md  meetings.md  paper_notes.md  weekly.md
FL-xtp/: README.md  batch.sh  pyproject.toml  requirements.txt
FL-xtp/flwr_xtp/: client_app.py  dataset.py  models.py  server_app.py
base_xtp_ouput/: preds_0.txt
fed-xtp-output/: labels.txt  preds_0.txt
flwr-xtp/: README.md  pyproject.toml
flwr-xtp/flowertune_llm/: client_app.py  dataset.py  server_app.py
flwr-xtp/flwr-xtp/: dataset.py
flwr_xtp/flowertune_llm/: client_app.py
wandb/: latest-run
wandb/run-20251121_153143-eq9ql3jl/: run-eq9ql3jl.wandb
wandb/run-20251121_153143-eq9ql3jl/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
